--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.16.6",
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -12,6 +13,7 @@
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
+    "redux-form-antd": "^3.1.9",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
