--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-form-antd": "^3.1.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "valid-url": "^1.0.9",
+    "validator": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
