--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^1.0.5",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
@@ -16,6 +17,7 @@
     "redux-form": "^8.2.0",
     "redux-form-antd": "^3.1.9",
     "redux-thunk": "^2.3.0",
+    "unescape": "^1.0.1",
     "valid-url": "^1.0.9",
     "validator": "^11.0.0"
   },
