--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.0",
+    "react-timeago": "^4.4.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-form-antd": "^3.1.9",
