--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "3.0.0",
+    "react-scripts": "3.0.1",
     "react-timeago": "^4.4.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-form-antd": "^3.1.9",
     "redux-thunk": "^2.3.0",
+    "standard": "^14.3.1",
     "unescape": "^1.0.1",
     "valid-url": "^1.0.9",
     "validator": "^11.0.0"
@@ -26,10 +27,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "standard --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "browserslist": {
     "production": [
